# GPTestTask

./: CMakeLists.txt  GPTestTask.kdev4  README.md  analyze.cpp  analyze.h  boost_serialization_eigen.h  dataimporter.cpp  dataimporter.h  functions.h  main.cpp  regressionmodels.cpp  regressionmodels.h  solver.cpp  solver.h  taskData.csv  taskdata.cpp  taskdata.h  tester.cpp  tester.h
results/: QOil1_params.txt  QOil2_params.txt  QOil4_params.txt  QWater1_params.txt  QWater2_params.txt  delta_QOil1.csv  delta_QOil2.csv  delta_QOil4.csv  delta_QWater1.csv  delta_QWater2.csv  func_QOil1.ps  func_QOil2.ps  func_QOil4.ps  func_QWater1.ps  func_QWater2.ps  results.txt
